# Sockets

./: .gitignore  SocketServerTesting.sln  SocketTestApp.sln  dumpbin_2.txt
AWS/: AWS.csproj
AWS/GameLift/: GameLiftNativeAPI.cs
AWS/Properties/: AssemblyInfo.cs
BouncingBalls/DemoApp/: BallAvatar.cs  DemoApp.csproj  Form1.cs  GraphicsView.cs  IBall.cs
BouncingBalls/DemoApp/Properties/: AssemblyInfo.cs
Calculator/: Calculator.csproj  CalculatorClient.cs  CalculatorServer.cs  CalculatorUtils.cs
Calculator/Client/: Calculator.Client.csproj  Program.cs
Calculator/Common/: Calculator.Common.csproj  CalculatorClient.cs  CalculatorServer.cs
Calculator/Common/Messages/: AddMessage.cs  CalculationErrorMessage.cs  CalculationResultMessage.cs  MultiplyMessage.cs
Calculator/Messages/: AddMessage.cs  CalculationErrorMessage.cs  CalculationResultMessage.cs  MultiplyMessage.cs
Calculator/Properties/: AssemblyInfo.cs
Calculator/Server/: Calculator.Server.csproj  Program.cs
Calculator/Server/Properties/: AssemblyInfo.cs
Calculator/Tests/: CalculatorTests.csproj  Class1.cs
CalculatorClientApp/: CalculatorClientApp.csproj  Program.cs
CalculatorClientApp/Properties/: AssemblyInfo.cs
CalculatorServerApp/: CalculatorServerApp.csproj
Demos/BouncyBall/Client/: BouncyBall.Client.csproj  BouncyBallClient.cs  Class1.cs
Demos/BouncyBall/Client/Properties/: AssemblyInfo.cs
Demos/BouncyBall/DemoApp/: BallAvatar.cs  BouncyBall.DemoApp.csproj  Form1.Designer.cs  Form1.cs  GraphicsView.Designer.cs  Program.cs
Demos/BouncyBall/DemoApp/Graphics/: BallAvatar.cs  ControlRoom.cs  GraphicsView.Designer.cs  GraphicsView.cs  IBall.cs  IRoom.cs
Demos/BouncyBall/DemoApp/Simulation/: ISimulation.cs  LocalSimulation.cs  NetworkedSimulation.cs
Demos/BouncyBall/DemoApp/Simulation/Local/: LocalSimulation.cs
Demos/BouncyBall/DemoApp/Simulation/Network/: LocalClient.cs  NetworkedSimulation.cs  (+2 more)
Demos/BouncyBall/Messages/: BouncyBall.Messages.csproj  CreateBallMessage.cs  DestroyBallMessage.cs  MessageTypes.cs  UpdateBallMessage.cs
Demos/BouncyBall/Messages/Properties/: AssemblyInfo.cs
Demos/BouncyBall/Server/: BouncyBall.Server.csproj  BouncyBallServer.cs
Demos/BouncyBall/Server.ConsoleHost/: BouncyBall.Server.ConsoleHost.csproj  Program.cs
Demos/BouncyBall/Server.ConsoleHost/Properties/: AssemblyInfo.cs
Demos/BouncyBall/Server.GameLiftHost/: BouncyBall.Server.GameLiftHost.csproj  Program.cs
Demos/BouncyBall/Server.GameLiftHost/Properties/: AssemblyInfo.cs
Demos/BouncyBall/Server/Properties/: AssemblyInfo.cs
Demos/BouncyBall/Server/State/: BallState.cs  WorldState.cs
Demos/Calculator/Client/: Calculator.Client.csproj  CalculatorClient.cs  Program.cs
Demos/Calculator/Messages/: AddMessage.cs  CalculationErrorMessage.cs  CalculationResultMessage.cs  Calculator.Messages.csproj  MultiplyMessage.cs
Demos/Calculator/Server/: Calculator.Server.csproj  CalculatorServer.cs
Demos/Calculator/Tests/: CalculatorTests.csproj  Class1.cs
Demos/Calculator/Tests/Properties/: AssemblyInfo.cs
GameLiftManagedSDK/: AssemblyInfo.cpp  GameLiftManagedSDK.cpp  GameLiftManagedSDK.h  GameLiftManagedSDK.vcxproj  GameLiftManagedSDK.vcxproj.filters  ReadMe.txt  Stdafx.cpp
Libraries/SocketServer/: AuthResult.cs  IClientCredentials.cs  ISocketConnection.cs  ISocketMessage.cs  ISocketServer.cs  SocketClient.cs  SocketConnection.cs  SocketMessageSerializer.cs  SocketServer.cs  SocketServer.csproj  SocketServerClient.cs
Libraries/SocketServer.GameLift/: GameLiftAPI.cs  GameLiftErrorType.cs  GameLiftServer.cs  GameSession.cs  SocketServer.Server.GameLift.csproj
Libraries/SocketServer.GameLift/Properties/: AssemblyInfo.cs
Libraries/SocketServer/Messages/: AuthRequestMessage.cs  AuthResponseMessage.cs  DisconnectMessage.cs  PingRequestMessage.cs  PingResponseMessage.cs  SocketMessage.cs
Libraries/SocketServer/Utils/: BinaryUtils.cs  Logger.cs
SocketServer.Server/: SocketServer.Server.csproj  SocketServer.cs
SocketServer.Server/Properties/: AssemblyInfo.cs
SocketTestApp/: BinaryUtils.cs  ISocketConnection.cs  ISocketMessage.cs  ISocketMessageHandler.cs  ISocketServer.cs  SocketClient.cs  SocketMessage.cs  SocketMessageHandler.cs  SocketServer.cs  SocketState.cs  Sockets.csproj
SocketTestApp/Properties/: AssemblyInfo.cs
Sockets/: AuthResult.cs  BinaryUtils.cs  IClientCredentials.cs  ISocketClient.cs  ISocketConnection.cs  ISocketMessageHandler.cs  ISocketServer.cs  PingMessage.cs  PongMessage.cs  SocketClient.cs  SocketConnection.cs  SocketMessageHandler.cs  SocketMessageSerializer.cs  SocketServer.cs  Sockets.csproj
Sockets.AWSGameLiftServer/: Sockets.AWSGameLiftServer.csproj
Sockets.AWSGameLiftServer/GameLift/: GameLiftAPI.cs  GameLiftErrorType.cs  GameLiftServer.cs  GameSession.cs
Sockets/Messages/: AuthRequestMessage.cs  AuthResponseMessage.cs  PingRequestMessage.cs  PingResponseMessage.cs  SocketMessage.cs
Sockets/Utils/: BinaryUtils.cs
Test/: Program.cs  Test.csproj
Test/Properties/: AssemblyInfo.cs
TestCpp/: TestCpp.cpp  TestCpp.vcxproj
TestCpp/Debug/: vc120.idb
TestCpp/Debug/TestCpp.tlog/: CL.read.1.tlog  CL.write.1.tlog  TestCpp.lastbuildstate  cl.command.1.tlog
TestCpp/x64/Debug/: vc120.idb
TestCpp/x64/Debug/TestCpp.tlog/: CL.read.1.tlog  CL.write.1.tlog  TestCpp.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ext/aws/GameLiftServerSDK_3_1_1/: CMakeLists-ExternalProjects.txt  CMakeLists.txt  README.md
ext/aws/GameLiftServerSDK_3_1_1/gamelift-server-sdk/: CMakeLists.txt
ext/aws/GameLiftServerSDK_3_1_1/gamelift-server-sdk/include/aws/gamelift/common/: Outcome.h
ext/aws/GameLiftServerSDK_3_1_1/gamelift-server-sdk/include/aws/gamelift/server/: GameLiftServerAPI.h  GameLiftServerAPI_extern_c.h
ext/aws/GameLiftServerSDK_3_1_1/gamelift-server-sdk/source/aws/gamelift/server/: AuxProxyMessageSender.cpp  GameLiftServerAPI.cpp  GameLiftServerAPI_extern_c.cpp  GameLiftServerState.cpp  Network.cpp
ext/aws/GameLiftServerSDK_3_1_1/gamelift-server-sdk/source/aws/gamelift/server/protocols/: sdk.pb.cc  sdk.pb.h
